template jornada lunes

--- a/news-text/index.html
+++ b/news-text/index.html
@@ -10,7 +10,6 @@
 
 </head>
 <style>
-
 .container-principal{
     max-width: 800px;
 }
@@ -58,9 +57,9 @@
 }
 .retangulo-green{
     width: 50%;
-    height: 175px;
+    height: 170px;
     background-color: #4cd566;
-    margin-left: 110px;
+    margin-left: 75px;
     flex-wrap: wrap;
 
 }
@@ -68,21 +67,22 @@
     width: 50%;
     height: 180px;
     background-color:#3f1c7b;
-    margin-left: 295px;
+    margin-left: 325px;
     flex-wrap: wrap;
 }
 .imagem-lunes{
     width:75%; 
     height:300px;
     opacity: 0.99;
-    margin: -358px 0 0 100px;
-    flex-wrap: wrap;
+    margin: -346px 0 0 100px;
+    flex-wrap: nowrap;
     background-image:
     -webkit-linear-gradient(top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%),url("https://cdn.discordapp.com/attachments/485129974383116301/487007795087015941/imagem-email.jpg"); /* FF3.6-15 */
 
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
    
 }
+
 .foto{
    max-width:100%;
    max-height:100%;
@@ -90,34 +90,35 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', e
 }
 
 .escrita-img{
-    text-align: center;
     font-family: 'Roboto', sans-serif;
-    margin-top: -300px;
     color: #ffffff;
-    position: relative;
     flex-wrap: nowrap;
+    text-align: center;
+    padding: 120px 0 0 15px;
 }
 
 .texto-img{
     width: 30%;
     display: block;
-    margin: 30px 0 0 280px;
+    margin: 30px 0 0 210px;
     font-size: 20px;
     flex-wrap: wrap;
+    
 }
 .spacer{
-    width: 3%;
-    height: 3%;
+    width: 4%;
+    height: 2px;
     background-color: #ffffff;
-    position: absolute;
-    margin: 9px 0 0 390px;
-    flex-wrap: nowrap;  
+    margin: 9px 0 0 290px;
+    flex-wrap: wrap;
+     
 }
 .text-3{
     display: block;
     margin: 15px 0 0 10px;
     font-size: 31px;
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
+ 
 }
 .texto{
     width:100%;
@@ -140,7 +141,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', e
     font-weight: bold;
     text-align: center;
     color: #4a4a4a; 
-    padding-top: 36px;
+    margin-top: -40px;
     font-size: 2.0em;
     flex-wrap: wrap;
 }
